data/all_generated_tests/raw_wast_tests/loop_InfiniteLoops_569.wast
;; 10. **Test Name: Infinite Loop with Stack Interaction**     - **Description**: Design a loop that continuously manipulates the stack, ensuring the branch instruction at the end evaluates to loop back indefinitely.     - **Constraint Checked**: Proper stack unwinding and operand handling that propagates back into the loop.     - **Infinite Loop Relation**: Operand consumption and stack interaction continue to loop indefinitely.

(assert_invalid
  (module
    (func $infinite_loop_with_stack_interaction
      (loop (result i32)
        (i32.const 42)
        (i32.add)
        (br 0)
      )
    )
  )
  "type mismatch"
)